# geometric_plotter

./: .gitignore  README.md  pyproject.toml
examples/: cbar.py  color.py  figs.py
src/geometric_plotter/: core.py
