[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "geometric_plotter"
version = "0.0.1"
authors = [
    {name = "Santiago F. Caracciolo", email = "santiago.caracciolo@gmail.com"},
]
description = "A wrapper of matplotlib to plot triangle meshes or cloud points."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "geometric_tools @ git+https://github.com/sfcaracciolo/geometric_tools.git"
]
